[package]
name = "prolog"
version = "0.1.0"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"
build = "build.rs" # For LALRPOP

[dependencies]
scoped_map = { git = "https://github.com/mb64/scoped_map.git", branch = "main" }
lasso = "0.3.1"
logos = "0.11.4"
lalrpop-util = "0.19.0"
codespan-reporting = "0.9.5"
itertools = "0.9"

[build-dependencies]
lalrpop = "0.19.0"
