[package]
name = "prolog"
version = "0.1.0"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"
build = "build.rs" # For LALRPOP

[dependencies]
scoped_map = { git = "https://github.com/mb64/scoped_map.git", branch = "main" }
typed-arena = { git = "https://github.com/mb64/rust-typed-arena" }
lasso = "0.3.1"
logos = "0.11.4"
lalrpop-util = "0.19.0"
codespan-reporting = "0.9.5"
itertools = "0.9"
rustyline = "6.3.0"
log = "0.4.11"
pretty_env_logger = "0.4"
cpu-time = "1.0.0"
unicode-segmentation = "1.7"

[build-dependencies]
lalrpop = "0.19.0"
